PA_Education/TestMenifest/force-app/main/default/objects/Class__c/Class__c.object-meta.xml
<CustomObject>
    <description>강의 Object</description>
    <label>Training</label>
    <nameField>
        <displayFormat>강의-{0000}</displayFormat>
        <label>강의 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>