PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(StartDate__c))) + &apos; &apos; + Times__c + &apos; &apos; + TEXT(Target__c) + &apos; 교육&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>교육공고</label>
    <type>Text</type>
</CustomField>