PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/ClassNameEng__c.field-meta.xml
<CustomField>
    <fullName>ClassNameEng__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE(StartDate__c))) + &apos; &apos; + Times__c + &apos; &apos; + TEXT(Target__c) + &apos; Training&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>교육공고 (English)</label>
    <type>Text</type>
</CustomField>