PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>강의 상세설명</description>
    <label>상세설명</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>