PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>종료시간</label>
    <type>DateTime</type>
</CustomField>