PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/fm_Status__c.field-meta.xml
<CustomField>
    <fullName>fm_Status__c</fullName>
    <formula>IF( TODAY() &gt; DATEVALUE(StartDate__c  ) , &apos;신청마감&apos;, &apos;신청진행중&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>