PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>과정 시작시간</description>
    <label>시작시간</label>
    <type>DateTime</type>
</CustomField>