PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>진행하는 과정의 이름</description>
    <label>과정명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>