PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/SubjectEng__c.field-meta.xml
<CustomField>
    <fullName>SubjectEng__c</fullName>
    <label>과정명 (English)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>