PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>과정 수강자 대상</description>
    <label>과정 대상</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
                <default>true</default>
                <label>Administrator</label>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>시스템 관리자</fullName>
                <isActive>false</isActive>
                <label>시스템 관리자</label>
            </value>
            <value>
                <fullName>컨설턴트</fullName>
                <isActive>false</isActive>
                <label>컨설턴트</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>