PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/Times__c.field-meta.xml
<CustomField>
    <fullName>Times__c</fullName>
    <description>ex) 24회차 10회차 
강의가 진행되는 차수</description>
    <label>차수</label>
    <length>255</length>
    <type>Text</type>
</CustomField>