PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/Tuition__c.field-meta.xml
<CustomField>
    <fullName>Tuition__c</fullName>
    <label>수강료</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>