PA_Education/TestMenifest/force-app/main/default/objects/Class__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>강의 유형 : 내부(Internal) , 외부(external)</description>
    <label>강의 유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>내부</fullName>
                <default>true</default>
                <label>내부</label>
            </value>
            <value>
                <fullName>외부</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>