PA_Education/TestMenifest/force-app/main/default/objects/Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ClassName__c</columns>
    <columns>Subject__c</columns>
    <columns>Times__c</columns>
    <columns>Type__c</columns>
    <columns>Target__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>fm_Status__c</columns>
    <columns>OrderNum__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>